resolve the checkbox overlap issue

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -101,3 +101,18 @@ body {
  .welcome-button::before {
    content: "<";
  }
+
+.welcome-dismiss-bar {
+   background-color: #252526;
+   position: fixed;
+   z-index: 1000;
+   bottom: 0;
+   right: 0;
+   left: 0;
+}
+
+.footer-check {
+   min-height: 1.5rem;
+   padding-left: 1.5em;
+   margin-bottom: 12px;
+}
